aggiornamento tabelle ricerca

--- a/catalogo-multipag-his/angular.json
+++ b/catalogo-multipag-his/angular.json
@@ -120,5 +120,8 @@
       }
     }
   },
-  "defaultProject": "catalogo-multipag-his"
+  "defaultProject": "catalogo-multipag-his",
+  "cli": {
+    "analytics": false
+  }
 }
